--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -217,6 +217,8 @@
 </tr>
 </tbody>
 </table>
+<p> <br>
+</br></p>
 <h1 id="fcm-standalone">FCM Standalone</h1>
 <table>
 <thead>
@@ -269,6 +271,10 @@
 </tr>
 </tbody>
 </table>
+<blockquote><p>Note: the FCM templates are only available for the Extend module.</p>
+</blockquote>
+<p> <br>
+</br></p>
 <h1 id="fcm--t24">FCM + T24</h1>
 <table>
 <thead>
@@ -321,80 +327,10 @@
 </tr>
 </tbody>
 </table>
-<h1 id="wealthsuite-modelbank">Wealthsuite ModelBank</h1>
-<table>
-<thead>
-<tr>
-<th>Template   Name</th>
-<th>Version</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>MB-TAPT24-OpenLiberty-Sybase-202003</td>
-<td>202003</td>
-<td>WealthSuite ModelBank 202003</td>
-</tr>
-<tr>
-<td>MB-TAPT24-OpenLiberty-Sybase-202002</td>
-<td>202002</td>
-<td>WealthSuite ModelBank 202002</td>
-</tr>
-<tr>
-<td>MB-TAPT24-OpenLiberty-Sybase-202001</td>
-<td>202001</td>
-<td>WealthSuite ModelBank 202001</td>
-</tr>
-<tr>
-<td>MB-TAPT24-OpenLiberty-Sybase-201912</td>
-<td>201912</td>
-<td>WealthSuite ModelBank 201912</td>
-</tr>
-<tr>
-<td>MB-TAPT24-OpenLiberty-Sybase-201911</td>
-<td>201911</td>
-<td>WealthSuite ModelBank 201911</td>
-</tr>
-</tbody>
-</table>
-<h1 id="wealthsuite---front-office-only">WealthSuite - Front Office only</h1>
-<table>
-<thead>
-<tr>
-<th>Template   Name</th>
-<th>Version</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202003</td>
-<td>202003</td>
-<td>WealthSuite 202003 - Front Office only</td>
-</tr>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202002</td>
-<td>202002</td>
-<td>WealthSuite 202002 - Front Office only</td>
-</tr>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-202001</td>
-<td>202001</td>
-<td>WealthSuite 202001 - Front Office only</td>
-</tr>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201912</td>
-<td>201912</td>
-<td>WealthSuite 201912 - Front Office only</td>
-</tr>
-<tr>
-<td>MB-TAPWeb-Only-OpenLiberty-Sybase-201911</td>
-<td>201911</td>
-<td>WealthSuite 201911 - Front Office only</td>
-</tr>
-</tbody>
-</table>
+<blockquote><p>Note: the FCM templates are only available for the Extend module.</p>
+</blockquote>
+<p> <br>
+</br></p>
 <h1 id="testtools">TestTools</h1>
 <table>
 <thead>
