--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -162,7 +162,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/sftp-ids.png" alt=""> </p>
+<p><img src="images/sftp-ids.png" alt=""> </p>
 <ul>
 <li>The database appears as TAFJDB.zip. In order to download the zip, select it and press F5. After is being downloaded, you can unzip it to see the db file.</li>
 <li>After this step, you can close the SFTP connection: Session &gt; Disconnect.</li>
@@ -186,7 +186,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/db-git-clone.png" alt=""> </p>
+<p><img src="images/db-git-clone.png" alt=""> </p>
 <ul>
 <li>In the screen that opens, fill the following:<ul>
 <li>in the URL textbox, paste the Endpoint of Repository Application of your Environment (previously copied)</li>
@@ -202,7 +202,7 @@
 <li>You will be able to see the <strong>corebanking</strong> repository structure with several folders like: addons, client_files, packages, plugins, updates, wsdl etc.</li>
 <li>The TAFJDB.zip must be placed into client_files &gt; h2db folder:</li>
 </ul>
-<p><img src="./images/db-tafjdb-zip.png" alt=""> </p>
+<p><img src="images/db-tafjdb-zip.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>In case you made changes to the db file, please make sure you archive it as a ZIP and rename it as TAFJDB - <em>capital letters are case sensitive</em> - before pushing it into the repository).</p>
 <p>Also note that this procedure will replace the existing database in the cloud with this one. The old database will be lost, including any records loaded manually.</p>
 </div>
@@ -211,7 +211,7 @@
 <li>Click right inside the <strong>h2db</strong> folder and choose <strong>Git commit master</strong>, check the not versioned files that you want to push (in this case TAFJDB.zip), put a comment in the box, then commit and push. </li>
 <li>After the success message, close the box.</li>
 </ul>
-<p><img src="./images/db-push-db.png" alt=""> </p>
+<p><img src="images/db-push-db.png" alt=""> </p>
 <h2 id="deploy-db-and-check-the-change">Deploy DB and Check the Change</h2>
 <ul>
 <li>Go back to the portal to the target environment and click the <strong>Deploy</strong> button under the Repository</li>
@@ -226,7 +226,7 @@
 </ul>
 </li>
 </ul>
-<p><img src="./images/db-check-record.png" alt=""> </p>
+<p><img src="images/db-check-record.png" alt=""> </p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
