--- a/home/toc.html
+++ b/home/toc.html
@@ -184,7 +184,7 @@
                     <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
                   </li>
                   <li>
-                    <a href="techguides/factory-migration.html" name="" title="Manage Factory Migrations">Manage Factory Migrations</a>
+                    <a href="./techguides/manage-test-scripts.md" name="" title="Manage Test Scripts">Manage Test Scripts</a>
                   </li>
                   <li>
                     <a href="techguides/stage-testcases.html" name="" title="Manage Test Cases Upload">Manage Test Cases Upload</a>
