--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -117,8 +117,19 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
 <p><img src="images/env-template.png" alt=""></p>
-<p>Currently, the screen that opens will display an FCM and T24 default template. Click on the Template Type and select for one of the applications, for example T24 to see the latest retail Suites versions and other available templates.</p>
-<p><img src="images/env-template-type.png" alt=""></p>
+<p>Click on the Template Type and select for one of the applications, for example T24 to see the templates that are available for your organisation. The templates details is split into three tabs:</p>
+<ul>
+<li>Release Notes</li>
+</ul>
+<p><img src="./images/env-template-releasenotes.png" alt=""></p>
+<ul>
+<li>a comprehensive Components List</li>
+</ul>
+<p><img src="./images/env-template-componentslist.png" alt=""></p>
+<ul>
+<li>Template Content </li>
+</ul>
+<p><img src="./images/env-template-templatecontent.png" alt=""></p>
 <h1 id="user-roles-required">User Roles Required#</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
