--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -126,18 +126,20 @@
 </ul>
 <p><img src="./images/db-authorise-record.png" alt=""> </p>
 <h2 id="export-the-database">Export the Database</h2>
-<p>In case you want to export and re-import the database into an environment or do some changes and import it back or to a different environment, please follow the steps below:</p>
+<p>To export and re-import the database into an environment or do some changes and import it back or to a different environment, check the steps below:</p>
+<div class="NOTE"><h5>Note</h5><p>To avoid database corruption, all TSA and user activity needs to be stopped so a DB Export can be taken safely.</p>
+</div>
 <ul>
 <li><p>To trigger the export, click the <strong>Export</strong> button under Database (also confirm the action on the pop-up to be able to proceed).</p>
 </li>
-<li><p>After clicking, it will start exporting (the action should take less than a minute or more minutes based on the DB size). While exporting, the button is disabled, after the export is done, the button gets enabled back.</p>
+<li><p>After clicking the export starts (the action takes around a few minutes based on the DB size). While exporting, the button is disabled, after the export is done, the button gets enabled back.</p>
 </li>
 </ul>
 <p><img src="images/db-exporting.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>Please note that the same steps showed in this demo can be followed to export an environment. Start exporting by using the <strong>Export</strong> button (check the available buttons under T24 Release).</p>
 </div>
 <ul>
-<li>During this action, the db is exported through SFTP server to which you have to connect in order to download the related content on your local machine. </li>
+<li>During this action, the DB is exported through SFTP server to which you have to connect in order to download the related content on your local machine. </li>
 <li>Download WinSCP from <a href="https://winscp.net/eng/index.php" target="_blank"><strong>here</strong></a>.</li>
 <li>Open WinSCP and create a new site which will allow the connection through SFTP server:<ul>
 <li>For host name, use the endpoint of the db. <em>(You can copy it from your portal by clicking the copy icon near the endpoint of the database - &#39;sftp.temenos.cloud&#39;).</em></li>
