--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,7 +82,33 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
-<h1 id="202005-release-notes"><strong>2020.05 Release Notes</strong></h1>
+<h1 id="20200501"><strong>202005.01</strong></h1>
+<p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 202005.HF1
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 2020051 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005.1</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Key vault not assigned to the correct subscription</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the Platform has been enhanced to automate the assignment of  the key vault for client dedicated subscription 
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. &#39;Update Factory&#39; not working properly</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the product configurations on the factory runs are fixed</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the user can select all products as Principle Products</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- it is not mandatory to have 1 product in the &quot;Select other products&quot; field when setting up a factory 
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Wrong manifest file for Template created from a Factory configured with 2 different stages for the Base and Principle products.</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the Artifactory URLs are now correctly set for all components in the manifest of a template created from a factory which is configured with different stages for the Other/ Principle products.
+<br>
+</br>
+&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Inconsistent factory run scheduling pattern</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the factory run scheduler behaviour follows the pattern defined by the user
+<br>
+</br>
+&nbsp;&nbsp;&nbsp;&nbsp;<strong>5. UI Issues on filters</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the UI filtering feature has been fixed
+<br>
+</br></p>
+<h1 id="202005"><strong>202005</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalVersion</strong>: cloudPortal_1.80d
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 140 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -112,7 +138,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- online documentation has been enhanced in order to describe how to create custom templates from model bank templates
 <br>
 </br></p>
-<h1 id="202004-release-notes"><strong>2020.04 Release Notes</strong></h1>
+<h1 id="202004"><strong>202004</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1658
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 99 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202004.1 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -140,7 +166,7 @@
 </br></p>
 <p><br>
 </br></p>
-<h1 id="202002-release-notes"><strong>2020.02 Release Notes</strong></h1>
+<h1 id="202002"><strong>202002</strong></h1>
 <p><strong>InfraBuild</strong>: 362 &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: cloudPortal_1.79e
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 26</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -158,7 +184,7 @@
 </br></p>
 <p><br>
 </br></p>
-<h1 id="202001-release-notes"><strong>2020.01 Release Notes</strong></h1>
+<h1 id="202001"><strong>202001</strong></h1>
 <p><strong>InfraBuild</strong>: 355 &nbsp; <strong>|</strong>  &nbsp;<strong>PortalTag</strong>: cloudPortal_1.78 &nbsp;<strong>|</strong>  &nbsp;<strong>ControllerBuild</strong>: 12</p>
 <h2 id="dashboard-enhancements">Dashboard enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. UI Updates</strong></p>
