--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -82,6 +82,20 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202006"><strong>202006</strong></h1>
+<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: TBA
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Additional enhancements</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- dashboards now show the Test Workflow name for easy correlation
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Customizable workflow</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users have the ability to create new test workflows that can be assigned to the  factories</p>
+<h2 id="admin-portal">Admin portal</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are forced to reset password after first login</p>
+<p><br>
+</br></p>
 <h1 id="20200501"><strong>202005.01</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 202005.HF1
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 2020051 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005.1</p>
@@ -108,7 +122,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- the UI filtering feature has been fixed</p>
 <p><br>
 </br></p>
-<h1 id="202005"><strong>2020.05</strong></h1>
+<h1 id="202005"><strong>202005</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalVersion</strong>: cloudPortal_1.80d
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 140 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -138,7 +152,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- online documentation has been enhanced in order to describe how to create custom templates from model bank templates
 <br>
 </br></p>
-<h1 id="202004"><strong>2020.04</strong></h1>
+<h1 id="202004"><strong>202004</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 1658
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 99 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202004.1 </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -166,7 +180,7 @@
 </br></p>
 <p><br>
 </br></p>
-<h1 id="202002"><strong>2020.02</strong></h1>
+<h1 id="202002"><strong>202002</strong></h1>
 <p><strong>InfraBuild</strong>: 362 &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: cloudPortal_1.79e
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 26</p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
@@ -184,7 +198,7 @@
 </br></p>
 <p><br>
 </br></p>
-<h1 id="202001"><strong>2020.01</strong></h1>
+<h1 id="202001"><strong>202001</strong></h1>
 <p><strong>InfraBuild</strong>: 355 &nbsp; <strong>|</strong>  &nbsp;<strong>PortalTag</strong>: cloudPortal_1.78 &nbsp;<strong>|</strong>  &nbsp;<strong>ControllerBuild</strong>: 12</p>
 <h2 id="dashboard-enhancements">Dashboard enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. UI Updates</strong></p>
