--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -126,7 +126,7 @@
 <td>Custom Help Text files can be uploaded in this folder. The file structure must be the same as HELP.TEXT T24 core. Thus, under client_files\helptext folder, the HelpText folder with subfolders for each component (AA, EB, PP, etc.) is expected.</td>
 </tr>
 <tr>
-<td>packages</td>
+<td>packages\l3</td>
 <td>One or more T24 DS (Design Studio) packages can be uploaded into this folder. All packages will be deployed automatically inside T24.</td>
 </tr>
 <tr>
