--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -124,7 +124,7 @@
 <li>all the libraries that are needed by the test cases must be kept here. This includes the Selenium library, its extension and its dependencies.</li>
 </ul>
 </li>
-<li><p>properties file with at least the following  properties  (“sys.t24.IP”, “sys.t24.port&quot;, “sys.test.results.folder”, “sys.web.driver.folder”)</p>
+<li><p>properties file with at least the following  properties  (“sys.t24.browser.url”, “sys.test.results.folder&quot;, “sys.web.driver.folder”, “sys.t24.login.username1”,  “sys.t24.login.password1”, “sys.t24.login.username2”, “sys.t24.login.password2”) </p>
 <ul>
 <li><p>while the test VM is provisioned, Temenos Continuous Deployment Platform will alter these values based on the IP and Port of the T24 VM</p>
 </li>
@@ -330,7 +330,8 @@ The test framework should generate the manifest.xml file with the above details.
 &lt;result&gt;FAIL&lt;/result&gt;
 &lt;hostName&gt;&lt;/hostName&gt;
 &lt;/Manifest&gt;
-</code></pre><p>By clicking <a href="../zip/TestCases.zip">HERE</a>  you can download the sample of the Selenium Test framework, which is capable of running sample UI based tests.</p>
+</code></pre><p>Click  <strong><a href="../zip/TestCases.zip">HERE</a></strong>  to download the sample of the Selenium Test framework, which is capable of running sample UI based tests.</p>
+<p>Click <strong><a href="../zip/testresults.zip">HERE</a></strong>  to download the Selenium source code.</p>
 <p><br></p>
               <hr>
               
