--- a/home/design-studio-tutorials.html
+++ b/home/design-studio-tutorials.html
@@ -81,8 +81,8 @@
             <article class="content wrap" id="_content" data-uid="">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" language="javascript" src="scripts/getTemplates.js"></script>
-<script type="text/javascript" language="javascript" src="scripts/getTemplateDetails.js"></script>
+<script type="text/javascript" language="javascript" src="./scripts/getTemplates.js"></script>
+<script type="text/javascript" language="javascript" src="./scripts/getTemplateDetails.js"></script>
 <script type="text/javascript" language="javascript" src="scripts/js-yaml.min.js"></script>
 
 <p>Please note that the tutorials are aimed for the Design Studio 201710 version and is applicable for the latest releases as well. </p>
