--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -114,11 +114,62 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 </div>
 <ul>
 <li><strong>Templates</strong></li>
+<li><strong>Organisation ID</strong></li>
+</ul>
+<p>The Temenos Development Platform support multitenancy and Organisations are designed to be distinctive accounts.  </p>
+<p>Upon subscription you&#39;ll receive a <strong>unique</strong> Organisation Id as a URL link. Your Organisation Id will look similar to this: </p>
+<p><img src="images/organisation-url.png" alt=""> </p>
+<p>The confirmation of your Organisation activation will contain the link and access instructions to your designated Organisation administrator. The administrator is the first and only user.</p>
+<p><br></p>
+<ul>
+<li><strong>Environments</strong></li>
+</ul>
+<p>The Development platform (Extend) has the capability to provision environments in a variety of different configurations. Users can initiate a new environment and select from a predefined list of templates the application, the release and stack they wish to provision. Each month we host a new template with the latest release of Temenos suite. </p>
+<p>The environments are customisable in terms of Name and brief description to explain their purpose. The templates follow the official Temenos configuration stack but they can be customised for Releases 2016 onwards.   </p>
+<p>Create your own environment:</p>
+<ul>
+<li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner</li>
+<li>Or you can already see the environment page open with the fields available to create a new environment</li>
+</ul>
+<p><img src="images/env_tab.png" alt=""></p>
+<p><br></p>
+<ul>
+<li>Fill Name and Description fields</li>
+<li>Select one of the available templates from dropdown list, based on your requirements</li>
+<li>Click <strong>Create environment</strong>
+All fields are mandatory except &#39;Labels&#39;</li>
+</ul>
+<p><img src="images/env-new.png" alt=""></p>
+<p><br></p>
+<p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
+<img src="./images/env-list.png" alt=""></p>
+<p><br>
+</br></p>
+<ul>
+<li><strong>Templates</strong></li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
 <p><img src="images/env-template.png" alt=""></p>
-<p>Currently, the screen that opens will display an FCM and T24 default template. Click on the Template Type and select for one of the applications, for example T24 to see the latest retail Suites versions and other available templates.</p>
-<p><img src="images/env-template-type.png" alt=""></p>
+<p>Click on the Template Type and select for one of the applications, for example T24 to see the templates that are available for your organisation. The templates details is split into three tabs that provide:</p>
+<ul>
+<li>the release notes</li>
+</ul>
+<p><img src="./images/env-template-type-releasenotes.png" alt=""></p>
+<ul>
+<li>a comprehensive list of components</li>
+</ul>
+<p><img src="./images/env-template-type-componentslist.png" alt=""></p>
+<ul>
+<li>the template content </li>
+</ul>
+<p><img src="./images/env-template-type-templatecontent.png" alt=""></p>
+<h1 id="user-roles-required">User Roles Required#</h1>
+<p>To be able to create an environment the below permissions need to be enabled for your user:</p>
+<ul>
+<li>CREATE _ ENVIRONMENT</li>
+<li>MANAGE _ ENVIRONMENTS</li>
+</ul>
+<p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
               <hr>
               
