--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -121,16 +121,16 @@ All fields are mandatory except &#39;Labels&#39;.</li>
 <ul>
 <li>Release Notes</li>
 </ul>
-<p><img src="./images/env-template-releasenotes.png" alt="env-template-releasenotes"></p>
+<p><img src="./images/env-template-releasenotes.png" alt=""></p>
 <ul>
 <li>a comprehensive Components List</li>
 </ul>
-<p><img src="./images/env-template-componentslist.png" alt="env-template-componentslist"></p>
+<p><img src="./images/env-template-componentslist.png" alt=""></p>
 <ul>
 <li>Template Content </li>
 </ul>
-<p><img src="./images/env-template-templatecontent.png" alt="env-template-templatecontent"></p>
-<h1 id="user-roles-required">User Roles Required#</h1>
+<p><img src="./images/env-template-templatecontent.png" alt=""></p>
+<h1 id="user-roles-required">User Roles Required</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
