--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -97,8 +97,8 @@
 <p>The environments are customisable in terms of Name and brief description to explain their purpose. The templates follow the official Temenos configuration stack but they can be customised for Releases 2016 onwards.   </p>
 <p>Create your own environment:</p>
 <ul>
-<li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner.  </li>
-<li>Or you can already see the environment page open with the fields available to create a new environment.</li>
+<li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner</li>
+<li>Or you can already see the environment page open with the fields available to create a new environment</li>
 </ul>
 <p><img src="images/env_tab.png" alt=""></p>
 <p><br></p>
@@ -106,31 +106,32 @@
 <li>Fill Name and Description fields</li>
 <li>Select one of the available templates from dropdown list, based on your requirements</li>
 <li>Click <strong>Create environment</strong>
-All fields are mandatory except &#39;Labels&#39;.</li>
+All fields are mandatory except &#39;Labels&#39;</li>
 </ul>
 <p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
-<p> To see the details of an environment please make sure to first select it from the top-right-side menu:
-<img src="images/environment-see-details.png" alt=""></p>
+<p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
+<img src="images/env-list.png" alt=""></p>
+<p><br>
+</br></p>
 <ul>
 <li><strong>Templates</strong></li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
 <p><img src="images/env-template.png" alt=""></p>
-<p>Click on the Template Type and select for one of the applications, for example T24 to see the templates that are available for your organisation. The templates details is split into three tabs:</p>
+<p>Click on the Template Type and select for one of the applications, for example T24 to see the templates that are available for your organisation. The templates details is split into three tabs that provide:</p>
 <ul>
-<li>Release Notes</li>
+<li><p>the release notes</p>
+<p><img src="images/env-template-type-releasenotes.png" alt=""></p>
+</li>
+<li><p>a comprehensive list of components</p>
+<p><img src="images/env-template-type-componentslist.png" alt=""></p>
+</li>
+<li><p>the template content </p>
+<p><img src="images/env-template-type-templatecontent.png" alt=""></p>
+</li>
 </ul>
-<p><img src="./images/env-template-releasenotes.png" alt=""></p>
-<ul>
-<li>a comprehensive Components List</li>
-</ul>
-<p><img src="./images/env-template-componentslist.png" alt=""></p>
-<ul>
-<li>Template Content </li>
-</ul>
-<p><img src="./images/env-template-templatecontent.png" alt=""></p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-roles-required">User Roles Required#</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
