--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -102,7 +102,8 @@
 </ul>
 <p><br>
 </br></p>
-<p>The test script component that can be used by this template must be a .zip file with the following folders:</p>
+<p>The test script component that can be used by this template must be a .zip within a .zip file (see screenshot below) with the following folders:</p>
+<p><img src="images/components-test-script.png" alt=""></p>
 <ul>
 <li><p><strong>Test suite 1</strong> (this could be any name - it is assumed this as a suite of tests that needs to be executed)</p>
 <ul>
