--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -97,7 +97,7 @@
 <p>a. Principle Products – Principle products simply mean the list of components that are being tested against a stable set of other pre-tested components. After successfully running the factory, the principle products are promoted to the next stage (the configured one).</p>
 <p>b. Other products (Base Products) – Products that are pre-tested (by other factories). These are products that don’t need to be promoted but they are required to test the Principle Products.</p>
 </li>
-<li><p>**2 templates **</p>
+<li><p><strong>2 templates</strong></p>
 <p>a. Environment Template - holds the details of the template that is to be used to deploy the components selected by the factory</p>
 <p>b. Test Template – specifies the template that is required to deploy a test environment that holds the testing framework and test scripts. This is needed to generalize the test tools as a template.</p>
 </li>
