--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -158,7 +158,8 @@ Test Stage: represents a stable version of components that is pre-tested from th
 </li>
 </ul>
 <p>At the end of this step, when the first round of tests is completed, the test VM will be deleted, but it will not stop the T24 environment (this will be done at the end of the workflow)</p>
-<p><br>
+<p><img src="images/factory-test-configuration.png" alt="factory-product-configuration"> 
+<br>
 </br></p>
 <h2 id="promotion-configuration">Promotion Configuration</h2>
 <p>This configuration enables the user to select all the required principle products along with the target stage to which they will be promoted after a successful factory run. In addition, the user can select the Test Components along with the target stage if they need promotion as well. 
