--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,6 +82,20 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202006"><strong>202006</strong></h1>
+<p><strong>InfraBuild</strong>: 28  &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 202006.RC6
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 176  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202006</p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Dashboard enhancements</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- dashboards now show the Test Workflow name for easy correlation
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Customizable workflow</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users have the ability to create new test workflows that can be assigned to the  factories</p>
+<h2 id="admin-portal">Admin portal</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- users are forced to reset password after first login</p>
+<p><br>
+</br></p>
 <h1 id="20200501"><strong>202005.01</strong></h1>
 <p><strong>InfraBuild</strong>: 28 &nbsp;<strong>|</strong>&nbsp; <strong>PortalBuild</strong>: 202005.HF1
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 2020051 &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202005.1</p>
