--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -176,7 +176,8 @@ The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options ar
 <img src="images/factory-see-details.png" alt=""></p>
 </li>
 </ul>
-<p><strong>Limitation</strong>: The user is not able to edit existing factories with a scheduler having start date set in the past. No option to disable the factory scheduler.</p>
+<blockquote><p><strong>Limitation:</strong> The user is not able to edit existing factories with a scheduler having start date set in the past. No option to disable the factory scheduler. As a workaround set the scheduler Start &amp; End dates to a future date in order to update the factory configuration.</p>
+</blockquote>
 <h2 id="edit-a-factory">Edit a Factory</h2>
 <ul>
 <li>Click the <strong>Edit</strong> button</li>
